<resources>
    <string name="app_name">mylib</string>
    <string name="return_a_book">Return a book</string>
    <string name="borrow_a_book">Borrow a book</string>
    <string name="profile">Profile</string>
    <string name="general_info">General info</string>
    <string name="book_name">book name</string>
    <string name="author">Author:</string>
    <string name="number_of_copies">Number of copies:</string>
    <string name="borrow">Borrow</string>
    <string name="genre">Genre:</string>
    <string name="publish_year">Publish Year:</string>

    <string-array name="books">
        <item>Harry Hotter and the Philosophers stone</item>
        <item>The Lion, the Witch and the Wardrobe</item>
        <item>Name of the wind</item>
    </string-array>

    <string-array name="authors">
        <item> J.k Rolling</item>
        <item>C.S lewis</item>
        <item>Patrick Rothfuss</item>
    </string-array>

    <integer-array name="numberOfCopies">
        <item>5</item>
        <item>3</item>
        <item>4</item>
    </integer-array>

</resources>