<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".ClientHomeActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="Welcome Customer"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="65dp" />

    <Button
        android:id="@+id/goToReturn"
        android:layout_width="216dp"
        android:layout_height="67dp"

        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="goToReturn"
        android:text="@string/return_a_book"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToBorrow"
        android:layout_width="216dp"
        android:layout_height="67dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="goToBorrow"
        android:text="@string/borrow_a_book"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToProfile"
        android:layout_width="216dp"
        android:layout_height="67dp"
        android:layout_marginBottom="412dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="gotToProfile"
        android:text="@string/profile"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToLibInfo"
        android:layout_width="216dp"
        android:layout_height="67dp"
        android:layout_marginBottom="512dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="goToLibInfo"
        android:text="@string/general_info"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="goBack"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>